mudando nome das pastas

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <section class="bg">
             <div class="primary">
-                <a href="#"><img src="/images/logo.svg" alt=""></a>
+                <a href="#"><img src="images/logo.svg" alt=""></a>
                 <h1>Copie toda a historia</h1>
                 <p>Clipboard permite que você rastreie e organize tudo o que você copia, acesse instantaneamente sua área de transferência em todos os seus dispositivos</p>
             </div>
@@ -33,7 +33,7 @@
     </div>
     <!-- note e asneiras -->
     <section class="third">
-        <div><img src="/images/image-computer.png" alt=""></div>
+        <div><img src="images/image-computer.png" alt=""></div>
         <ul>
             <li>
                 <h1>Procura Rapida</h1>
@@ -55,7 +55,7 @@
         <section class="four">
             <h1>Acesse Clipboard de Qualquer Lugar</h1>
             <p>Esteja você em trânsito ou em seu computador, você pode acessar todos os trechos da área de transferência com apenas alguns cliques</p>
-            <div><img src="/images/image-devices.png" alt=""></div>
+            <div><img src="images/image-devices.png" alt=""></div>
         </section>
     </div>
 
@@ -107,18 +107,19 @@
             </ul>
         </div>
     </section>
+
     <section class="container">
         <div class="wrap-2">
-            <div><img src="/images/logo-google.png" alt=""></div>
+            <div><img src="images/logo-google.png" alt=""></div>
 
 
-            <div><img src="/images/logo-ibm.png" alt=""></div>
+            <div><img src="images/logo-ibm.png" alt=""></div>
 
-            <div><img src="/images/logo-microsoft.png" alt=""></div>
+            <div><img src="images/logo-microsoft.png" alt=""></div>
 
-            <div><img src="/images/logo-hp.png" alt=""></div>
+            <div><img src="images/logo-hp.png" alt=""></div>
 
-            <div><img src="/images/logo-vector-graphics.png" alt=""></div>
+            <div><img src="images/logo-vector-graphics.png" alt=""></div>
         </div>
     </section>
 </body>
