finalizado clipboard, projeto do clipmentor inpementado por mim

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <!-- footer -->
     <footer>
-        <div class="logo-2"><img src="/images/logo.svg" alt=""></div>
+        <div class="logo-2"><img src="images/logo.svg" alt=""></div>
         <ul class="links">
             <li><a href="#">FAQs</a></li>
             <li><a href="#">Contate-nos</a></li>
